# AlertCalendar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.ps1  build.sh
src/: main.cpp
src/app/: AppInfo.h  AppPaths.cpp  AppPaths.h  SingleInstance.cpp  SingleInstance.h
src/core/: TimeUtils.cpp  TimeUtils.h
src/model/: CalendarDayMeta.h  Note.h  NoteRepository.cpp  NoteRepository.h
src/settings/: AppSettings.cpp  AppSettings.h  AutostartWin.cpp  AutostartWin.h
src/win/: CalendarView.cpp  CalendarView.h  ImageRtf.cpp  ImageRtf.h  MainWindow.cpp  MainWindow.h  MarkupConvert.cpp  MarkupConvert.h  NotificationWindow.cpp  NotificationWindow.h  RichEditUtil.cpp  RichEditUtil.h  UiTheme.cpp  UiTheme.h  WinUtil.cpp  WinUtil.h
